Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6335

win32k: Assertion 'Hash == TableMask' failed when switching mode with cirrus driver installed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Blocker
    • None
    • Win32SS
    • None
    • Operating System: ReactOS
      Platform: x86 Hardware

    Description

      Created an attachment (id=7552)
      debug log

      Tested in r56122, qemu 0.10.11 with cirrus video driver slipstreamed. Ros boots with the driver but any attempt to change mode (resolution/bpp) results in assert. Debug log attached. Assigning to Timo

      Attachments

        1. cirrus.7z
          62 kB
        2. default.txt
          26 kB
        3. qemu_0_11_0_cirrus_1024_768.png
          qemu_0_11_0_cirrus_1024_768.png
          96 kB

        Issue Links

          Activity

            People

              ThePhysicist Timo Kreuzer
              haos Haos
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: