[WIN32K] Allow passing NULL to EngFreeMem, like on Windows. Fixes mode switching with cirrus driver on qemu. CORE-6335 #resolve

svn path=/trunk/; revision=57325